Add support for archive, resources dir sys properties